Added shockwave ability for giants, when crouching and right-clicking.